--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+/* Accessibility overrides */
+/* Boostrap variables overrides */
 /* Text */
 /* Navbar */
 /* Dropdown */
@@ -1386,7 +1388,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 1.6;
-  color: #757575;
+  color: #474747;
   background-color: #f5f8fa;
 }
 
@@ -1630,7 +1632,7 @@ mark,
 }
 
 .text-muted {
-  color: #777777;
+  color: #474747;
 }
 
 .text-primary {
@@ -2698,7 +2700,7 @@ table {
 caption {
   padding-top: 8px;
   padding-bottom: 8px;
-  color: #777777;
+  color: #474747;
   text-align: left;
 }
 
@@ -3494,7 +3496,7 @@ select[multiple].input-lg,
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #b5b5b5;
+  color: #878787;
 }
 
 @media (min-width: 768px) {
@@ -5671,8 +5673,8 @@ a.badge:hover, a.badge:focus {
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
-  color: inherit;
-  background-color: #BBDEFB;
+  color: #474747;
+  background-color: #81c2f7;
 }
 
 .jumbotron h1,
@@ -5687,7 +5689,7 @@ a.badge:hover, a.badge:focus {
 }
 
 .jumbotron > hr {
-  border-top-color: #8bc7f8;
+  border-top-color: #51abf4;
 }
 
 .container .jumbotron,
@@ -5740,7 +5742,7 @@ a.badge:hover, a.badge:focus {
 
 .thumbnail .caption {
   padding: 9px;
-  color: #757575;
+  color: #474747;
 }
 
 a.thumbnail:hover,
